为k8s node添加medata-annotations-THISIP字段

--- a/scripts/ansible/playbooks/label_k8s_nodes.yml
+++ b/scripts/ansible/playbooks/label_k8s_nodes.yml
@@ -15,3 +15,11 @@
       when: ansible_os_family == 'Debian'
       with_items: "{{ ansible_play_batch }}"
       run_once: true
+
+    - name: Fetch node IP
+      command: "hostname -i"
+      register: node_ip_result
+
+    - name: Set metadata-annotations-THISIP
+      command: "kubectl annotate node {{ item }} THISIP={{ node_ip_result.stdout }} --overwrite"
+      with_items: "{{ ansible_play_batch }}"
