--- a/docker/virtctl/ubuntu22/Dockerfile
+++ b/docker/virtctl/ubuntu22/Dockerfile
@@ -23,7 +23,7 @@ ADD kubeovn-adm /home/kubevmm/bin/
 ADD kubevmm-adm /home/kubevmm/bin/
 
 ADD virshplus /home/kubevmm/bin/
-
+ADD nvidai_driver_manager /home/kubevmm/bin/
 #ADD kubesds-adm /home/kubevmm/bin/
 ADD sdsctl /home/kubevmm/bin/
 
