修复ansible https链接下载失败的bug

--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -11,6 +11,7 @@
         name:
           - bzip2
           - wget
+          - ca-certificates
         state: present
       when: ansible_os_family == 'RedHat'
 
