尝试修复ubuntu apt bug

--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -184,6 +184,7 @@
       apt:
         update_cache: yes
       when: ansible_os_family == 'Debian'
+      ignore_errors: true
 
     - name: Install required packages
       apt:
