--- a/scripts/ansible/playbooks/label_k8s_nodes.yml
+++ b/scripts/ansible/playbooks/label_k8s_nodes.yml
@@ -23,3 +23,4 @@
     - name: Set metadata-annotations-THISIP
       command: "kubectl annotate node {{ item }} THISIP={{ node_ip_result.stdout }} --overwrite"
       with_items: "{{ ansible_play_batch }}"
+      run_once: true
