--- a/scripts/ansible/playbooks/label_k8s_nodes.yml
+++ b/scripts/ansible/playbooks/label_k8s_nodes.yml
@@ -5,22 +5,17 @@
 
   tasks:
     - name: Label centos7 nodes
-      command: "kubectl label node {{ item }} doslab/virt.tool.centos="
+      command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.centos="
       when: ansible_os_family == 'RedHat'
-      with_items: "{{ ansible_play_batch }}"
-      run_once: true
 
     - name: Label ubuntu22 nodes
-      command: "kubectl label node {{ item }} doslab/virt.tool.ubuntu="
+      command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.ubuntu="
       when: ansible_os_family == 'Debian'
-      with_items: "{{ ansible_play_batch }}"
-      run_once: true
 
     - name: Fetch node IP
       command: "hostname -i"
       register: node_ip_result
 
     - name: Set metadata-annotations-THISIP
-      command: "kubectl annotate node {{ item }} THISIP={{ node_ip_result.stdout }} --overwrite"
-      with_items: "{{ ansible_play_batch }}"
-      run_once: true
+      command: "kubectl annotate node {{ inventory_hostname }} THISIP={{ node_ip_result.stdout }} --overwrite"
+
