根据麒麟系统修改ansible参数

--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -13,39 +13,39 @@
           - wget
           - ca-certificates
         state: present
-      when: ansible_os_family == 'RedHat'
+      when: ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server'
 
     - name: Download Anaconda3 installer
       get_url:
         url: https://repo.anaconda.com/archive/Anaconda3-2021.11-Linux-x86_64.sh
         dest: /tmp/Anaconda3-2021.11-Linux-x86_64.sh
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Run Anaconda3 installer
       command: bash /tmp/Anaconda3-2021.11-Linux-x86_64.sh -b -p /opt/anaconda3
       args:
         creates: /opt/anaconda3  # Ensure the installer is not run if Anaconda is already installed
-      when: ansible_os_family == 'RedHat'  and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server')  and offline is none
 
     - name: Add Anaconda3 to PATH
       lineinfile:
         dest: "{{ ansible_env.HOME }}/.bashrc"
         line: 'export PATH=/opt/anaconda3/bin:$PATH'
         create: yes
-      when: ansible_os_family == 'RedHat'  and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Reload bashrc to apply changes
       shell: bash --rcfile "{{ ansible_env.HOME }}/.bashrc"
       async: 60  # 设置一个合适的超时时间
       poll: 0    # 非阻塞，立即返回结果
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
 
     - name: Install Python 3.9.7 using conda
       shell: /opt/anaconda3/bin/conda install -y python=3.9.7
       register: conda_install_output
       ignore_errors: true
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
 #    - name: Debug conda installation output
 #      debug:
@@ -64,14 +64,14 @@
       shell: /opt/anaconda3/bin/python3.9 -m ensurepip
       args:
         creates: /usr/local/bin/pip3.9
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Create symbolic link for python3.9
       file:
         src: /opt/anaconda3/bin/python
         dest: /usr/local/bin/python3.9
         state: link
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Create symbolic link for pip3.9
       file:
@@ -79,14 +79,14 @@
         dest: /usr/local/bin/pip3.9
         state: link
         force: yes
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Create symbolic link for python3
       file:
         src: /opt/anaconda3/bin/python
         dest: /usr/local/bin/python3
         state: link
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Create symbolic link for pip3
       file:
@@ -94,12 +94,15 @@
         dest: /usr/local/bin/pip3
         state: link
         force: yes
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Verify Python and pip installation
       command: python3 --version && pip3 --version && python3.9 --version && pip3.9 --version
-      when: ansible_os_family == 'RedHat' and offline is none
-
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
+    - name: Set yum repository
+      yum:
+        enablerepo: "local"
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is not none
     - name: Install EPEL release and OpenStack Rocky repository
       yum:
         name:
@@ -108,7 +111,7 @@
         state: present
       tags: 
         - packages
-      when: ansible_os_family == 'RedHat'
+      when: ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server'
 
     - name: Install required packages
       yum:
@@ -140,10 +143,11 @@
         state: present
       tags: 
         - packages
-      when: ansible_os_family == 'RedHat'
+      when: ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server'
 
     - name: Install and upgrade Python packages
       pip:
+
         name:
           - pip
           - threadpool
@@ -165,7 +169,7 @@
         executable: pip3
       tags: 
         - python_packages
-      when: ansible_os_family == 'RedHat' and offline is none
+      when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server') and offline is none
 
     - name: Enable and start libvirtd service
       systemd:
@@ -174,7 +178,7 @@
         state: started
       tags: 
         - services
-      when: ansible_os_family == 'RedHat'
+      when: ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server'
 
 - name: Install and configure packages
   hosts: master:worker
@@ -184,7 +188,6 @@
       apt:
         update_cache: yes
       when: ansible_os_family == 'Debian'
-      ignore_errors: true
 
     - name: Install required packages
       apt:
