根据麒麟系统修改python编译器

--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -6,6 +6,10 @@
     offline:
 
   tasks:
+    - name: Set python interpreter for Kylin
+      set_fact:
+        ansible_python_interpreter: /usr/bin/python3
+      when: ansible_os_family=='Kylin Linux Advanced Server'
     - name: Install required packages
       yum:
         name:
