--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -19,12 +19,12 @@
         state: present
       when: ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server'
 
-    - name: Download Anaconda3 installer
+    - name: Download Anaconda3 installer for x86_64
       get_url:
         url: https://repo.anaconda.com/archive/Anaconda3-2021.11-Linux-x86_64.sh
         dest: /tmp/Anaconda3.sh
       when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server' and ansible_machine == 'x86_64') and offline is none
-    - name: Download Anaconda3 installer
+    - name: Download Anaconda3 installer for arch
       get_url:
         url: https://repo.anaconda.com/archive/Anaconda3-2024.06-1-Linux-aarch64.sh
         dest: /tmp/Anaconda3.sh
