--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -26,7 +26,7 @@
       when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server' and ansible_machine == 'x86_64') and offline is none
     - name: Download Anaconda3 installer for arch
       get_url:
-        url: https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-aarch64.sh
+        url: https://mirrors.tuna.tsinghua.edu.cn/github-release/conda-forge/miniforge/Release%2024.7.1-2/Miniforge3-24.7.1-2-Linux-aarch64.sh
         dest: /tmp/Anaconda3.sh
       when: (ansible_os_family == 'RedHat' or ansible_os_family=='Kylin Linux Advanced Server' and ansible_machine == 'aarch64') and offline is none
 
