test on UOS system

--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -167,7 +167,7 @@
           - pip
           - threadpool
           - prometheus_client
-          - kubernetes
+          - kubernetes==26.1.0
           - libvirt-python
           - xmljson
           - xmltodict
