--- a/scripts/ansible/playbooks/install_and_setup_chrony.yml
+++ b/scripts/ansible/playbooks/install_and_setup_chrony.yml
@@ -9,7 +9,7 @@
           yum:
             name: chrony
             state: present
-          when: ansible_os_family == 'RedHat'
+          when: ansible_os_family == 'RedHat' or ansible_os_family == 'UOS'
 
         - name: Install Chrony on Ubuntu
           apt:
