--- a/scripts/ansible/playbooks/install_and_setup_chrony.yml
+++ b/scripts/ansible/playbooks/install_and_setup_chrony.yml
@@ -18,7 +18,7 @@
           when: ansible_os_family == 'Debian'
 
     - name: Set timezone to Asia/Shanghai
-      ansible.builtin.command: timedatectl set-timezone Asia/Shanghai
+      command: timedatectl set-timezone Asia/Shanghai
 
     - name: Configure Chrony servers
       block:
