解决未删除go导致的重复安装包的bug

--- a/scripts/ansible/playbooks/install_go.yml
+++ b/scripts/ansible/playbooks/install_go.yml
@@ -5,6 +5,10 @@
   vars:
     offline:
   tasks:
+    - name: Ansible delete previous go file
+      file:
+        path: /usr/local/go
+        state: absent
     - name: Download Go archive
       get_url:
         url: "https://golang.google.cn/dl/go1.19.1.linux-amd64.tar.gz"
