--- a/scripts/ansible/playbooks/label_k8s_nodes.yml
+++ b/scripts/ansible/playbooks/label_k8s_nodes.yml
@@ -12,10 +12,10 @@
       command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.ubuntu="
       when: ansible_os_family == 'Debian'
 
-    - name: Fetch node IP
-      command: "hostname -i"
-      register: node_ip_result
+#    - name: Fetch node IP
+#      command: "hostname -i"
+#      register: node_ip_result
 
     - name: Set metadata-annotations-THISIP
-      command: "kubectl annotate node {{ inventory_hostname }} THISIP={{ node_ip_result.stdout }} --overwrite"
+      command: "kubectl annotate node {{ inventory_hostname }} THISIP={{ ansible_default_ipv4.address }} --overwrite"
 
