--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -116,7 +116,7 @@
         state: present
       tags: 
         - packages
-      when: ansible_os_family == 'RedHat'
+      when: ansible_os_family == 'RedHat' and offline is none
     - name:  Install EPEL release and OpenStack Rocky repository for arch
       yum:
         name:
