--- a/scripts/ansible/playbooks/label_k8s_nodes.yml
+++ b/scripts/ansible/playbooks/label_k8s_nodes.yml
@@ -1,15 +1,30 @@
 ---
+# Copyright (2024) Institute of Software, Chinese Academy of Sciences
+# @author: liujiexin@otcaix.iscas.ac.cn
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#   http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 - name: Label Kubernetes Nodes
   hosts: worker
   become: false
 
   tasks:
     - name: Label centos7 nodes
-      command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.centos="
+      command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.centos= --overwrite"
       when: ansible_os_family == 'RedHat' or ansible_os_family=='UOS'
 
     - name: Label ubuntu22 nodes
-      command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.ubuntu="
+      command: "kubectl label node {{ inventory_hostname }} doslab/virt.tool.ubuntu= --overwrite"
       when: ansible_os_family == 'Debian'
 
 #    - name: Fetch node IP
